# spin-samples

./: .gitignore  README.md
go-http/: go.mod  spin.toml
infra/: main.bicep  resources.bicep  servicebus.bicep
rust-http/http1/: Cargo.toml  spin.toml
rust-http/http1/health/: Cargo.toml
rust-http/http1/ingress/: Cargo.toml
rust-http/http2/: Cargo.toml  run.sh  spin.toml  testbinding.sh
rust-http/http2/src/: lib.rs
scripts/: test-k3d-readiness.sh
ts-dapr/: .gitignore  Dockerfile  README.md  build-docker.sh  build-to-acr.sh  build-to-local-sh  create-k3d.sh  create-kind-kwasm.sh  create-kind.sh  debugwasmnode.sh  deploy-aks-from-acr.sh  deploy-k3d-ambient-from-acr.sh  deploy-k3d-from-acr.sh  deploy-k3d-from-local.sh  deploy-kind-from-acr.sh  logs.sh  package-lock.json  package.json  preprare-aks.sh  run-all-tmux.sh  run-instance.sh  run.sh  spin.toml  test-spin-aks.sh  test-spin-dapr-aks.sh  testbinding-k3d.sh  testbinding.sh  workload-aks-ambient.yml  workload-aks-sidecar.yml  workload-aks.yml  workload-k3d-ambient.yml  workload-k3d.yml  workload-kind-kwasm.yml  workload-kind.yml  workload.yml
ts-dapr/components/: order-express.yaml  order-ingress.yaml  order-standard.yaml
ts-dapr/components-distributor/: order-express.yaml  order-ingress.yaml  order-standard.yaml
ts-dapr/components-receiver-express/: order-express.yaml
ts-dapr/components-receiver-standard/: order-standard.yaml
ts-dapr/not-used/: deploy-kind-ambient-from-acr.sh  deploy-kind-kwasm-from-acr.sh  kind-config.yaml  workload-kind-ambient.yml
ts-dapr/src/: index.ts
(+3 files in other folders)
