[package]
name = "http2"
authors = ["Kai Walter <kai.walter@outlook.de>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[workspace]
